# mydeep

./: .gitignore  README.md  UserBehavior_sample.csv  base_line  lightgcn_train.out  main.py  pyproject.toml  requirements.txt  run copy.sh  run.sh  sgl  train_normal.txt  train_sgl.txt  脚本.sh
checkpoints/: lightgcn.pt  lightgcn_sgl.pt  lightgcn_sgl_n4_d128.pt
code/: final_LTGNN
configs/: ablation.yaml  lightgcn.yaml  lightgcn_sgl.yaml
data_100W/split/: test.csv  user_pos.json  valid.csv
data_50W/split/: test.csv  train.csv  user_pos.json  valid.csv
docs/: baseline_lightgcn.mermaid  faq_append_20251205.lark.md  full_report_20251205.lark.md  full_report_20251205.md  improvement_update_20251205.md  lightgcn_sgl.mermaid  model_structure_20251205.lark.md  plot_curves.py  update_20251205.md  whiteboards_20251205.md  whiteboards_20251205_fixed.lark.md
haohan_scripts/: make_fixed_sample.py  metrics.py  porlars_evaluate.py  prepare_taobao.py
logs/: lightgcn_eval.out  lightgcn_train.out  lightgcn_train_debug.out  lightgcn_train_evalfast.out  lightgcn_train_test.out
model/: lightgcn.py
mydeep/: UserBehavior.csv
scripts/: _bootstrap_gen.py  _quick_test_lightgcn.py  big_prepare_taobao.py  build_graph.py  evaluate.py  filter_min_interactions.py  make_fixed_sample.py  metrics.py  polars_build_graph.py  polars_infer.py  polars_prepare_taobao.py  polars_train.py  polars_train_sgl.py  porlars_evaluate.py  prepare_taobao.py  sample_users.py  train.py
scrpits/: evaluate_faiss.py  polars_train_sgl.py  train_sgl.py
